force-app/main/default/objects/SYS_Tracker__c/SYS_Tracker__c.object-meta.xml
<CustomObject>
    <label>SYS_Tracker</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>SYS_Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYS_Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>