force-app/main/default/objects/SYS_Tracker__c/fields/Valid_till__c.field-meta.xml
<CustomField>
    <fullName>Valid_till__c</fullName>
    <label>Valid till</label>
    <type>DateTime</type>
</CustomField>