force-app/main/default/objects/SYS_Tracker__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <externalId>true</externalId>
    <label>WhatId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>