force-app/main/default/objects/SYS_Tracker__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>WhoId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>