force-app/main/default/objects/SYS_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WhatId__c</columns>
    <columns>Type__c</columns>
    <columns>WhoId__c</columns>
    <columns>Valid_till__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>